@@ -86,7 +86,7 @@ SectionEnd
 Section "Programs (recommended)"
 	SetOutPath $INSTDIR
 	File "/oname=mlvirsh.exe" "mlvirsh\mlvirsh.opt"
-	#File "/oname=mlvirtmanager.exe" "mlvirsh\mlvirtmanager.opt"
+	File "/oname=mlvirtmanager.exe" "mlvirsh\mlvirtmanager.opt"
 SectionEnd
 
 Section "OCaml Libvirt bindings (for developers only)"
@@ -97,18 +97,22 @@ Section "Start Menu Shortcuts"
 	CreateDirectory "$SMPROGRAMS\${PACKAGE}"
 	CreateShortCut "$SMPROGRAMS\${PACKAGE}\Uninstall.lnk" "$INSTDIR\Uninstall ${PACKAGE}.exe" "" "$INSTDIR\Uninstall ${PACKAGE}.exe" 0
 	CreateShortCut "$SMPROGRAMS\${PACKAGE}\Virt Shell.lnk" "$INSTDIR\mlvirsh.exe" "" "$INSTDIR\mlvirsh.exe" 0
+	CreateShortCut "$SMPROGRAMS\${PACKAGE}\Virt Control.lnk" "$INSTDIR\mlvirtmanager.exe" "" "$INSTDIR\mlvirtmanager.exe" 0
 SectionEnd
 
 Section "Desktop Icons"
 	CreateShortCut "$DESKTOP\Virt Shell.lnk" "$INSTDIR\mlvirsh.exe" "" "$INSTDIR\mlvirsh.exe" 0
+	CreateShortCut "$DESKTOP\Virt Control.lnk" "$INSTDIR\mlvirtmanager.exe" "" "$INSTDIR\mlvirtmanager.exe" 0
 SectionEnd
 
 Section "Uninstall"
 	# Desktop icons
 	Delete /rebootok "$DESKTOP\Virt Shell.lnk"
+	Delete /rebootok "$DESKTOP\Virt Control.lnk"
 
 	# Menu shortcuts
 	Delete /rebootok "$SMPROGRAMS\${PACKAGE}\Virt Shell.lnk"
+	Delete /rebootok "$SMPROGRAMS\${PACKAGE}\Virt Control.lnk"
 	Delete /rebootok "$SMPROGRAMS\${PACKAGE}\Uninstall.lnk"
 	RMDir "$SMPROGRAMS\${PACKAGE}"
 
